OLCS-21329: Extrapolated the only GDS approved custom style from ecmt-permits and updated the orange status colour (GDS approved) to increase contrast to fix accessibility

--- a/assets/_styles/views/selfserve/ecmt-permits.scss
+++ b/assets/_styles/views/selfserve/ecmt-permits.scss
@@ -190,14 +190,6 @@
       }
     }
   }
-
-  .guidance-blue {
-    @extend %guidance;
-
-    background: #EBF5F9;
-    border-color: #005EA5;
-  }
-
 }
 
 .info-box--permit {
